Bug 823793 - [B2G][Browser]: Long site names and addresses in the Top Sites/Bookmark/History tabs do not have their text truncated gracefully

--- a/apps/browser/style/browser.css
+++ b/apps/browser/style/browser.css
@@ -718,6 +718,7 @@ li[role="listitem"] h5 {
   font-weight: normal;
   margin: 0;
   overflow: hidden;
+  text-overflow: ellipsis;
   white-space: nowrap;
   pointer-events: none;
   font-size: 1.4rem;
@@ -727,6 +728,7 @@ li[role="listitem"] small {
   display: block;
   color: #666;
   overflow: hidden;
+  text-overflow: ellipsis;
   white-space: nowrap;
   pointer-events: none;
 }
